3.1.1 (gallery) (#136)
* [skip] fix maven publication

* (1.20.1) fix chatWidget appearance

* (1.8.9, 1.16_combat-6) add option to disable inventory potion offset

* begin gallery implementation

* add loading animations

* add automatic reloading on file updates

* port to the other versions

* set mojang auth to only use http1.1

* fix various bugs

* fix BedwarsPlayerStats parameter mismatch

* fix more bugs

* fix another batch of bugs

* add options to display durability on the ArmorHud

* add secondary key to freelook

* add option to allow friends to access uploaded images in gallery

* update API user agent to include game version

- bump config library version to fix color option saving

* fix CoordsHud bugs, add biome option

* fix more armorhud bugs

* (1.21.1) fix crash when using minimal item physics

* some bug fixes

* refactor some auth code again

* (bedwars module) add a useful message for unknown bed break messages

* fix another bug

* fix more bugs

- (1.21.1) remove custom sky module

* (1.8.9) fix more custom sky-related bugs

* skip skies with non-existent textures

* add new bedwars messages

- fix auth again

* fix screenshot actions only affecting the most recent screenshot

* Update fr_fr.json

* Update fr_fr.json

* (1.8.9) fix flashy chat animation

* best-effort name formatting for biome locations

- (1.20.1) fix nametag shadows

* account for embed changes

* fix back button position on DownloadImageScreen

- fix TntTime for 1.21.4, rendering independent of other name tag attachments
- make PingHud always ping the server

* (1.21.4) lower TntTime display

* adjust text field length

* fix another few bugs

* improve error handling for image upload failures

* (1.8.9) fix ChatHud color/transparency issues

* fix API-related buttons not appearing correctly on the TitleScreen

* (1.8.9) "fix" raw mouse input option

- by delegating to glfw since