@@ -24,7 +24,6 @@ package io.github.axolotlclient.modules.auth;
 
 import java.nio.file.Path;
 import java.util.*;
-import java.util.stream.Collectors;
 
 import com.mojang.authlib.GameProfile;
 import com.mojang.authlib.minecraft.MinecraftProfileTexture;
@@ -66,11 +65,12 @@ public class Auth extends Accounts implements Module {
 		load();
 		this.auth = new MSAuth(AxolotlClient.LOGGER, this, () -> client.options.language);
 		if (isContained(client.getSession().getUuid())) {
-			current = getAccounts().stream().filter(account -> account.getUuid().equals(client.getSession().getUuid())).collect(Collectors.toList()).get(0);
-			if (current.needsRefresh()) {
-				current.refresh(auth, () -> {
-				});
-			}
+			current = getAccounts().stream().filter(account -> account.getUuid().equals(client.getSession().getUuid())).toList().get(0);
+			current.setAuthToken(client.getSession().getAccessToken());
+			current.setName(client.getSession().getUsername());
+			/*if (current.needsRefresh()) {
+				current.refresh(auth).thenRun(this::save);
+			}*/
 		} else {
 			current = new Account(client.getSession().getUsername(), client.getSession().getUuid(), client.getSession().getAccessToken());
 		}
@@ -95,9 +95,13 @@ public class Auth extends Accounts implements Module {
 			if (account.isExpired()) {
 				Notifications.getInstance().addStatus(new TranslatableText("auth.notif.title"), new TranslatableText("auth.notif.refreshing", account.getName()));
 			}
-			account.refresh(auth, () -> {
-				getAccounts().stream().filter(a -> account.getUuid().equals(a.getUuid())).findFirst().ifPresent(this::login);
-			});
+			account.refresh(auth).thenAccept(res -> {
+				res.ifPresent(a -> {
+					if (!a.isExpired()) {
+						login(a);
+					}
+				});
+			}).thenRun(this::save);
 		} else {
 			try {
 				API.getInstance().shutdown();
@@ -151,16 +155,14 @@ public class Auth extends Accounts implements Module {
 		client.execute(() -> client.openScreen(new ConfirmScreen((bl) -> {
 			client.openScreen(current);
 			if (bl) {
-				auth.startDeviceAuth(() -> {
-				});
+				auth.startDeviceAuth();
 			}
 		}, new TranslatableText("auth"), new TranslatableText("auth.accountExpiredNotice", account.getName()))));
 	}
 
 	@Override
 	void displayDeviceCode(DeviceFlowData data) {
-		Screen display = new DeviceCodeDisplayScreen(client.currentScreen, data);
-		client.openScreen(display);
+		client.execute(() -> client.openScreen(new DeviceCodeDisplayScreen(client.currentScreen, data)));
 	}
 
 	public Identifier getSkinTexture(Account account) {
